bk_ida/gccida/g1/build_compound_literal
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_compound_literal/src/c-decl.c:4367:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_compound_literal/src/c-decl.c:4399:60: error: use of undeclared identifier 'var_labelno'
sprintf( v9, "%s.%d", "__compound_literal", ( unsigned int)var_labelno); 
                                                           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_compound_literal/src/c-decl.c:4400:3: error: use of undeclared identifier 'var_labelno'
++var_labelno; 
  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_compound_literal/src/obj/c-decl.o] Error 1
